--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="brand-left" style="display:flex; gap:150px; align-items:center">
+        <div class="brand-left" style="display:flex; gap:auto; align-items:center">
           <div style="display:flex;align-items:center; gap:4px;">
             <div class="logo">GS</div>
             <div>
@@ -19,7 +19,7 @@
             </div>
           </div>
           <nav id="left-nav">
-            <ul style="display:flex;gap:75px;align-items:center;margin:0;padding:0;list-style:none">
+            <ul style="display:flex;gap:auto;align-items:center;margin:0;padding:0;list-style:none">
               <li class="nav-item">
                 <span data-i18n="nav.projects">主要项目</span>
                 <ul class="dropdown-menu">
@@ -134,3 +134,4 @@
 
 </body>
 </html>
+
