--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="brand-left" style="display:flex; gap:50px; align-items:center">
-          <div style="display:flex; align-items:center; gap:50px;">
+        <div class="brand-left" style="
+          display:flex;
+          gap:150px;
+          align-items:center
+          ">
+          <div style="
+            display:flex;
+            align-items:center;
+            gap:10px;
+            ">
             <div class="logo">GS</div>
             <div>
               <div id="site-tittle">GlobalSteam</div>
@@ -19,7 +27,14 @@
             </div>
           </div>
           <nav id="left-nav">
-            <ul style="display:flex; gap:50px; align-items:center; margin:0; padding:0; list-style:none">
+            <ul style="
+              display:flex;
+              gap:75px;
+              align-items:center;
+              margin:0;
+              padding:0;
+              list-style:none
+              ">
               <li class="nav-item">
                 <span data-i18n="nav.projects">主要项目</span>
                 <ul class="dropdown-menu">
@@ -50,9 +65,20 @@
             </ul>
           </nav>
         </div>
-        <div class="brand-right" style="display:flex;align-items:center;gap:50px">
+        <div class="brand-right" style="
+          display:flex;
+          align-items:center;
+          gap:50px
+          ">
           <nav id="right-nav">
-            <ul style="display:flex; gap:12px; align-items:center; margin:0; padding:0; list-style:none">
+            <ul style="
+              display:flex;
+              gap:auto;
+              align-items:center;
+              margin:0;
+              padding:0;
+              list-style:none
+              ">
               <li class="nav-item">
                 <span data-i18n="nav.support">支持</span>
                 <ul class="dropdown-menu">
@@ -134,6 +160,7 @@
 
 </body>
 </html>
+
 
 
 
